[tool.poetry]
name = "annoying-alarm-clock"
version = "0.1.0"
description = ""
authors = ["neeltron <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
datetime3 = "^3.8.0"
gTTS = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
